# dotfiles-manager

./: .gitignore  README.md  pyproject.toml
dotfiles/: cli.py  common.py  dotfiles.py  log.py
